; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_is_dir.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_os_posix.c_mz_os_is_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@MZ_OK = common dso_local global i32 0, align 4
@MZ_EXIST_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mz_os_is_dir(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat, align 4
  store i8* %0, i8** %3, align 8
  %5 = call i32 @memset(%struct.stat* %4, i32 0, i32 4)
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @stat(i8* %6, %struct.stat* %4)
  %8 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @S_ISDIR(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @MZ_OK, align 4
  store i32 %13, i32* %2, align 4
  br label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @MZ_EXIST_ERROR, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %12
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @memset(%struct.stat*, i32, i32) #1

declare dso_local i32 @stat(i8*, %struct.stat*) #1

declare dso_local i64 @S_ISDIR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
